# konnakol-gsoc

./: ABOUT_KONNAKOL.md  CHANGELOG.md  DiagramsTutorial.hs  HOW_TO_USE.md  README.md  diagrams-tutorial.cabal  konnakol.cabal
Konnakol/: Define.hs  Diagrams.hs  Sequence.hs
audiofiles/ac/: ardha-chaapu-1.aif  ardha-chaapu-2.aif  ardha-chaapu-3.aif  ardha-chaapu-4.aif  ardha-chaapu-5.aif  ardha-chaapu-6.aif  ardha-chaapu2-1.aif  ardha-chaapu2-10.aif  ardha-chaapu2-11.aif  ardha-chaapu2-12.aif  ardha-chaapu2-13.aif  ardha-chaapu2-14.aif  ardha-chaapu2-2.aif  ardha-chaapu2-3.aif  ardha-chaapu2-4.aif  ardha-chaapu2-5.aif  ardha-chaapu2-6.aif  ardha-chaapu2-7.aif  ardha-chaapu2-8.aif  ardha-chaapu2-9.aif
audiofiles/c/: chaapu-1.aif  chaapu-2.aif  chaapu-3.aif  chaapu-4.aif  chaapu2-1.aif  chaapu2-2.aif  chaapu2-3.aif  chaapu2-4.aif  chaapu2-5.aif  chaapu2-6.aif  chaapu2-7.aif  chaapu2-8.aif  chaapu2-9.aif
audiofiles/dhi/: dhi-1.aif  dhi-2.aif  dhi-3.aif  dhi2-1.aif  dhi2-2.aif  dhi2-3.aif  dhi2-4.aif
audiofiles/dhin/: dhin-1.aif  dhin-2.aif  dhin-3.aif  dhin2-1.aif  dhin2-2.aif  dhin2-3.aif  dhin2-4.aif  dhin2-5.aif
audiofiles/dhum/: dhum-1.aif  dhum-2.aif  dhum-3.aif  dhum2-1.aif  dhum2-2.aif  dhum2-3.aif  dhum2-4.aif
audiofiles/gumki/: gumki-1.aif  gumki-2.aif  gumki-3.aif  gumki-4.aif  gumki-5.aif  gumki-6.aif  gumki2-1.aif  gumki2-2.aif  gumki2-3.aif  gumki2-4.aif  gumki2-5.aif  gumki2-6.aif  gumki2-7.aif  gumki2-8.aif
audiofiles/ka/: ka-1.aif  ka-2.aif  ka-3.aif  ka-4.aif  ka-5.aif  ka-6.aif  ka-7.aif  (+5 more)
grammar/: cabal-file.cabal  define.hs  diagrams.hs
(+50 files in other folders)
