cabal-version:      2.4
name:               cabal-file
version:            0.1.0.0

executable diagrams
    main-is:          diagrams.hs
    build-depends:    base, diagrams-lib, diagrams-svg, split, colour, random, base
    default-language: Haskell2010
    hs-source-dirs : ., D:Coding/GSOC/OfficialCodingPeriod/konnakol-gsoc

-- executable define-grammar
--     main-is:          define.hs
--     build-depends:    random, base
--     default-language: Haskell2010